--- a/undervisningsopgaver/02_js_dom/style.css
+++ b/undervisningsopgaver/02_js_dom/style.css
@@ -2,6 +2,12 @@ article {
     border: 1px solid black;
 }
 
+section {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+
+}
+
 .grid_container {
     display: grid;
     grid-template-columns: 1fr;
@@ -16,4 +22,40 @@ article {
     margin-top: 1.2rem;
     margin-left: 1rem;
 
+}
+
+
+.grid_container_img {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin-top: 3rem;
+    margin-left: 1.2rem;
+    grid-gap: 2px;
+    text-align: center;
+    margin-bottom: 60px;
+
+}
+
+
+#billeder img {
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    height: 100vw;
+    width: 120vw;
+
+}
+
+#billeder1 img {
+    display: grid;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    height: 20vw;
+    width: 10vw;
+    margin-left: -1.1rem;
 }
